# edam-terms-reco

./: .env.example  .gitignore  README.md  chainlit.md  config.yaml  edam_mapping.py  edam_strategies.py  llm_config.py  llm_provider.py  main.py  main_v2.py  pyproject.toml
.chainlit/: config.toml
data/: EDAM_1.25.csv
docs/superpowers/plans/: 2026-06-02-llm-provider-config.md
docs/superpowers/specs/: 2026-06-02-llm-config-design.md
notebooks/: evaluation.ipynb  tool_term_mapping_grouped.csv
paper/: short_paper.tex
providers/: __init__.py  config.py  factory.py
tests/: test_llm_access.py  test_llm_config.py  test_mapping_v1.py
