[project]
name = "EDAM-term-recommender"
version = "0.1.0"
description = "EDAM-Terms-Reco is a tool designed to assist researchers and developers in identifying and recommending relevant EDAM ontology terms for bioinformatics resources, workflows, and datasets. The project aims to improve metadata annotation and interoperability in the life sciences. This is an early prototype and a work in progress. The tool has not been yet validated against any ground truth."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "rdflib>=7.1.4",
    "sentence-transformers",
    "pandas>=3.0.1",
    "langchain-groq",
    "langchain",
    "langchain-core",
    "langchain-ollama>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
